# easy-rest-api

./: .gitignore  Cargo.toml  README.md  populate_db.py  server_config.ini  server_config.toml
src/: bin.rs
src/lib/: app.rs  config_parser.rs  lib.rs  middleware.rs
src/lib/api_http_server/: http.rs  middleware.rs  mod.rs  routing.rs
src/lib/database/: fields.rs  interfaces.rs  mod.rs  model.rs  query.rs  response.rs  table.rs  table_schema.rs
