[package]
name = "easy-rest-api"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Si1veR123/easy-rest-api"
documentation = "https://github.com/Si1veR123/easy-rest-api/blob/main/README.md"
readme = "README.md"
license = "MIT"
description = "A simple library for creating a HTTP API with minimal setup."
homepage = "https://github.com/Si1veR123/easy-rest-api"
categories = ["database-implementations", "database", "web-programming::http-server", "encoding"]
keywords = ["rest-api", "http", "api", "sql", "database"]

[lib]
name = "rest_api"
path = "src/lib/lib.rs"

[dependencies]
sqlite3 = "0.24.0"
hyper = {version = "0.14.23", features = ["full"]}
clap = { version = "4.0.22", features = ["cargo"], optional = true }
env_logger = "0.9.3"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
json = "0.12.4"
toml = "0.5.9"
async-trait = "0.1.58"
chrono = "0.4.23"

[features]
build-binary = ["clap"]

[[bin]]
name = "rust_rest_api"
path = "src/bin.rs"
required-features = ["build-binary"]
